updating inventory in html

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -74,7 +74,7 @@ Eurasia Colony: hey there</textarea>
       </div>
 
       <div class="windowbg" id="inventory-view">
-        <table class="table table-dark">
+        <table class="table table-dark" id="inventory">
           <thead>
             <tr>
               <th scope="col">Material</th>
