production is working

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -17,7 +17,7 @@
             </div>
             <input type="text" class="form-control" id="chat-input" placeholder="write a message">
             <div class="input-group-prepend-append">
-              <button class="btn btn-default" onclick="document.getElementById('chat-input').value = ''" id="chat-button">send</button>
+              <button class="btn btn-default" id="chat-button">send</button>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
             </div>
           </div>
         </div>
-        <div id="production-progress">producing... 74%</div>
+        <div id="production-progress">no production</div>
       </div>
 
       <div class="windowbg" id="inventory-view">
