chat configuration is working

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -11,14 +11,7 @@
           <textarea class="form-control" id="chat-log" disabled></textarea>
         </div>
         <div class="form-row" id="chat-input-group">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="input-label"></span>
-            </div>
-            <input type="text" class="form-control" id="chat-input" placeholder="write a message">
-            <div class="input-group-prepend-append">
-              <button class="btn btn-default" id="chat-button">send</button>
-            </div>
+          <div class="input-group" id="chat-input-bar">
           </div>
         </div>
       </div>
