json download and config expanded

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -8,4 +8,5 @@
   <button id="admin-button-start">Start</button>
   <button id="admin-button-next">Next</button>
   <button id="admin-button-reset">Reset</button>
+  <button id="admin-button-download">Download log</button>
 </div>
