convertion and download of csv

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -5,8 +5,6 @@
   We suggest that you wrap the html in a div.
 -->
 <div id="admin">
-  <button id="admin-button-start">Start</button>
-  <button id="admin-button-next">Next</button>
-  <button id="admin-button-reset">Reset</button>
-  <button id="admin-button-download">Download log</button>
+  <button id="buttonDownloadJSON">Download log as json</button>
+  <button id="buttonDownloadCSV">Download log as csv</button>
 </div>
