--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div class="container">
     <div class="row">
+      <h3>Mars Colonies admin client</h3>
+    </div>
+    <div class="row">
       <p>
         <button class="btn btn-success" id="buttonStart">Start</button>
         <button class="btn btn-warning" id="buttonNext">Next Stage</button>
