window names added and behaviour improved

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -76,6 +76,11 @@
           </tbody>
         </table>
       </div>
+
+      <div class="col-md-12 windowbg" id="event-view">
+        <div class="title">Events</div>
+        <textarea class="form-control" id="event-log" disabled></textarea>
+      </div>
     </div>
 
   </div>
