canvas resizing added

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -56,7 +56,7 @@
               <input type="text" class="form-control" id="production-amount">
             </div>
             <div class="w-25">
-              <button class="btn btn-default w-100"onclick="document.getElementById('production-amount').value = ''" id="production-button">start</button>
+              <button class="btn btn-default w-100" id="production-button">start</button>
             </div>
           </div>
         </div>
