--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -14,6 +14,7 @@
       <p>
         <button class="btn btn-success" id="buttonStart">Start</button>
         <button class="btn btn-warning" id="buttonNext">Next Stage</button>
+        <button class="btn btn-warning" id="buttonEnd">End Game</button>
       </p>
     </div>
     <div class="row">
