name of the colony added at the top of the inventory

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -1,5 +1,5 @@
 <div class="bg">
-  <div class="row"><h1 class="mars-title">Controle Panel for: Colony Name 6</h1></div>
+  <div class="row d-flex align-items-center" id="colony-title-container"><div class="container windowbg title" id="colony-title">Controle Panel for: </div></div>
 
   <div class="row">
 
