room between colums on larger screens

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -3,7 +3,7 @@
 
   <div class="row">
 
-    <div class="col-lg-6">
+    <div class="col-md-6 col-xl-5">
       <div class="col-md-12 windowbg" id="map-view">
         <div class="title">Map</div>
         <div id="map-container">
@@ -22,7 +22,9 @@
       </div>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-xl-2 d-none d-xl-block"></div>
+
+    <div class="col-md-6 col-xl-5">
       <div class="col-md-12 windowbg" id="trade-view">
         <div class="title">Trade</div>
         <div id="trade-input">
