time-left window added

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -83,6 +83,11 @@
         <div class="title">Events</div>
         <textarea class="form-control" id="event-log" disabled></textarea>
       </div>
+
+      <div class="col-md-12 windowbg" id="time-view">
+        <div class="title">Time</div>
+        <div class="text-right" id="time-left">0 seconds</div>
+      </div>
     </div>
 
   </div>
