score window on client

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -20,6 +20,11 @@
           <div class="input-group" id="chat-input-bar"></div>
         </div>
       </div>
+
+      <div class="col-md-12 windowbg" id="score-view">
+        <div class="title">Score</div>
+        <div class="text-right" id="score"></div>
+      </div>
     </div>
 
     <div class="col-xl-2 d-none d-xl-block"></div>
