cleanup of modules

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -23,5 +23,10 @@
         <button class="btn btn-secondary" id="buttonDownloadCSV"><i class="fa fa-download"></i> Download CSV files</button>
       </p>
     </div>
+    <div class="container">
+      <div class="row" style="background-color: white;" id="graphs">
+        <div class="col-lg-6 col-xl-4" style="border: 1px solid lightgray; height: 300px; width: 300px;"><div id="gamenetworkgraphtitle">Game Network Graph</div><div id="gamenetworkgraph" class="col-12"></div></div>
+      </div>
+    </div>
   </div>
 </div>
