stage in logged events and bugfix with trading

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -1,5 +1,5 @@
 <div class="bg">
-  <div class="row d-flex align-items-center" id="colony-title-container"><div class="container windowbg title" id="colony-title">Controle Panel for: </div></div>
+  <div class="row d-flex align-items-center" id="colony-title-container"><div class="container windowbg title" id="colony-title">Control Panel for: </div></div>
 
   <div class="row">
 
@@ -99,9 +99,11 @@
 
       <div class="col-md-12 windowbg" id="time-view">
         <div class="title">Time</div>
-        <div class="text-right" id="time-left">0 seconds</div>
-        <div class="progress bg-dark">
-          <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%;"></div>
+        <div>
+          <div class="progress bg-dark">
+            <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%;"></div>
+          </div>
+          <div class="text-right" id="time-left">0 seconds</div>
         </div>
       </div>
     </div>
