--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -99,12 +99,10 @@
 
       <div class="col-md-12 windowbg" id="time-view">
         <div class="title">Time</div>
-        <div>
-          <div class="progress bg-dark">
-            <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%;"></div>
-          </div>
-          <div class="text-right" id="time-left">0 seconds</div>
+        <div class="progress bg-dark" style="width: 100%;">
+          <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%;"></div>
         </div>
+        <div class="text-right" id="time-left">0 seconds</div>
       </div>
     </div>
 
