--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -83,8 +83,9 @@
         <table class="table table-dark" id="inventory">
           <thead>
             <tr>
-              <th scope="col">Material</th>
-              <td scope="col">Amount</td>
+              <th scope="col" style="width: 20%;">Material</th>
+              <th scope="col" style="width: 60%;"></th>
+              <td scope="col" style="width: 20%;">Amount</td>
             </tr>
           </thead>
           <tbody>
@@ -100,7 +101,7 @@
       <div class="col-md-12 windowbg" id="time-view">
         <div class="title">Time</div>
         <div class="progress bg-dark" style="width: 100%;">
-          <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%;"></div>
+          <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%; margin: 0px;"></div>
         </div>
         <div class="text-right" id="time-left">0 seconds</div>
       </div>
