inventory changed from scaling to adding + when over starting-amount

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -84,7 +84,8 @@
           <thead>
             <tr>
               <th scope="col" style="width: 20%;">Material</th>
-              <th scope="col" style="width: 65%;"></th>
+              <th scope="col" style="width: 62%;"></th>
+              <th scole="col" style="width: 3%"></th>
               <td scope="col" style="width: 15%;">Amount</td>
             </tr>
           </thead>
