highlights of own name in the chat

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -19,7 +19,7 @@
           </ul>
           <div id="chatContent">
             <div id="all">
-              <textarea class="form-control chat-log" id="chat-log" disabled></textarea>
+              <div id="chat-log"></div>
             </div>
           </div>
         </div>
