highlight own name in event-log

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -96,7 +96,7 @@
 
       <div class="col-md-12 windowbg" id="event-view">
         <div class="title">Events</div>
-        <textarea class="form-control" id="event-log" disabled></textarea>
+        <div id="event-log"></div>
       </div>
 
       <div class="col-md-12 windowbg" id="time-view">
