--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -13,14 +13,15 @@
     <div class="row">
       <p>
         <button class="btn btn-success" id="buttonStart">Start</button>
-        <button class="btn btn-warning" id="buttonNext">Next Stage</button>
         <button class="btn btn-warning" id="buttonEnd">End Game</button>
+        <button class="btn btn-danger" id="buttonNext">Next Stage</button>
       </p>
     </div>
     <div class="row">
       <p>
         <button class="btn btn-secondary" id="buttonDownloadJSON"><i class="fa fa-download"></i> Download JSON file</button>
         <button class="btn btn-secondary" id="buttonDownloadCSV"><i class="fa fa-download"></i> Download CSV files</button>
+        <button class="btn btn-secondary" id="buttonDownloadPay"><i class="fa fa-download"></i> Download Payment file</button>
       </p>
     </div>
     <div class="container">
