card width fixed

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -5,7 +5,7 @@
       <h3>Mars Colonies admin client</h3>
     </div>
     <div class="row">
-      <div class="card">
+      <div class="card admincards">
         <div class="card-body">
           <h5 class="card-title">Stage controls</h5>
           <button class="btn btn-success" id="buttonStart">Start</button>
@@ -24,7 +24,7 @@
 
     <div class="row">
       <div class="card-group">
-        <div class="card">
+        <div class="card admincards">
           <div class="card-body">
             <h5 class="card-title">Download game and survey data</h5>
             <p class="card-text">When the experiment is done, download data from the game and survey here either as a one big json file or a number csv files</p>
@@ -33,7 +33,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card admincards">
           <div class="card-body">
             <h5 class="card-title">Download payment information</h5>
             <p class="card-text">When the participants are done with entering their payment information, the CSV file can be downloaded here. It is kept seperate from the game data </p>
