modals and moving to next stage with countdown added

--- a/src/stages/game/client/client.html
+++ b/src/stages/game/client/client.html
@@ -1,4 +1,45 @@
 <div class="bg">
+
+  <div class="modal" tabindex="-1" role="dialog" id="gameoverWindow">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="gameoverTitle">GAME OVER</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p id="gameoverScore"></p>
+          <p>Next round starting in <b id="gameoverCountdown"></b> seconds</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="youDiedWindow">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">You died!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p id="youDiedReason"></p>
+          <p>You can still interact follow the other players on the map and write with them in the chat.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="row d-flex align-items-center" id="colony-title-container"><div class="container windowbg title" id="colony-title">Control Panel for: </div></div>
 
   <div class="row">
