--- a/src/stages/postsurvey/client/client.html
+++ b/src/stages/postsurvey/client/client.html
@@ -1,5 +1,7 @@
-<div class="container bg-light" id="post-survey" style="width: 100%; height: 100%;">
-  <div class="row jumbotron"><h1>Post Survey</h1></div>
-  <div class="row">After the game, we are kindly ask you to participate to a short survey.</div>
-  <div class="row"><button id="client-start-survey" type="button" class="btn btn-default navbar-btn">Start Survey</button></div>
+<div class="bg container">
+  <div class="jumbotron" id="post-survey">
+    <div class="row"><h1>Post Survey</h1></div>
+    <div class="row">After the game, we are kindly ask you to participate to a short survey.</div>
+    <div class="row"><button id="client-start-survey" type="button" class="btn btn-default">Start Survey</button></div>
+  </div>
 </div>
