--- a/src/stages/survey/client/client.html
+++ b/src/stages/survey/client/client.html
@@ -1,7 +1,12 @@
-<div class="bg container">
-  <div class="jumbotron" id="survey">
-    <div class="row"><h1 id="surveyTitle"></h1></div>
-    <div class="row">We are kindly ask you to participate to a short survey.</div>
-    <div class="row"><button id="startSurvey" type="button" class="btn btn-default">Start Survey</button></div>
+<div class="bg">
+  <div class="row">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8">
+      <div class="jumbotron " id="survey">
+        <div class="row"><h1 id="surveyTitle"></h1></div>
+        <div class="row">We are kindly ask you to participate to a short survey.</div>
+        <div class="row"><button id="startSurvey" type="button" class="btn btn-default">Start Survey</button></div>
+      </div>
+    </div>
   </div>
 </div>
