fixed error message in cpr and allow for sending data with enter-key

--- a/src/stages/paymentmodule/client/client.html
+++ b/src/stages/paymentmodule/client/client.html
@@ -39,9 +39,9 @@
               <div class="form-group col-md-12">
                 <label for="cprnumber">CPR number</label>
                 <div class="input-group">
-                  <input type="text" class="form-control" id="cprnumber" aria-describedby="cprHelp" placeholder="Enter your CPR number">
+                  <input type="text" class="form-control" id="cprnumber" aria-describedby="cprHelp" placeholder="DDMMYY-XXXX">
                   <div class="invalid-feedback">
-                    Not a valid CPR number
+                    Invalid CPR number, please use DDMMYY-XXXX
                   </div>
                 </div>
               </div>
