bug in payment-module and popup with downloads when everyone is done with paymentinformation

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -51,4 +51,24 @@
     </div>
 
   </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="downloadAllWindow">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Everyone is done</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>All participants have now fill in the payment-survey, would you like to download all CSV files from this experiment?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="downloadAllCSV"><i class="fa fa-download"></i> Download</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
